# SalaryTracker

./: Dockerfile  README.md  main.py  pyproject.toml
api/: __init__.py  auth.py  endpoints.py  salary.py  tast.py  users.py
database/: database.py  fake_db.json
schemas/: __init__.py  salary_schema.py  token_schema.py  user_schema.py
services/: __init__.py  auth.py  service.py
tests/: conftest.py  message  test_service.py  variables.py
