[tool.poetry]
name = "salarytracker"
version = "0.1.0"
description = ""
authors = ["DeadDPie <elizabethfox434@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
passlib = "^1.7.4"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
