[tool.poetry]
name = "salarytracker"
version = "0.1.0"
description = ""
authors = ["DeadDPie <elizabethfox434@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.97.0"
pydantic = {extras = ["email"], version = "^1.10.9"}
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
pytest = "^7.3.2"

[tool.poetry.group.dev.dependencies]
passlib = "^1.7.4"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
